Prevent code samples from overflowing on mobile

--- a/public/resources/styles/custom.css
+++ b/public/resources/styles/custom.css
@@ -73,6 +73,7 @@ p code {
 
 .highlight {
   padding: 2px 4px;
+  overflow-x: scroll;
 }
 
 /*
